syntax = "proto3";

package cluster;
option go_package = "openmesh.io/mesh/api/cluster;cluster";

import "api/core/base.proto";

message CircuitBreakers {
  core.RoutingPriority priority = 1;
  uint32 max_connections = 2;
  uint32 max_pending_requests = 3;
  uint32 max_requests = 4;
  uint32 max_retries = 5;
  uint32 max_connection_pools = 7;
}
