syntax = "proto3";

package core;
option go_package = "openmesh.io/mesh/api/core;core";

// The status of the control-plane of the current data is identified to
// determine the corresponding lower control-plane operation.
enum ApiStatus {
  NONE = 0;
  DELETE = 1;
  UPDATE = 2;
  UNCHANGED = 3;
  ALL = 4;
}

enum RoutingPriority {
  DEFAULT = 0;
  HIGH = 1;
}
