syntax = "proto3";

package listener;
option go_package = "openmesh.io/mesh/api/listener;listener";

import "api/listener/listener_components.proto";
import "api/core/address.proto";
import "api/core/base.proto";

message Listener {
  core.ApiStatus api_status = 128;
  string name = 1;
  core.SocketAddress address = 2;
  repeated FilterChain filter_chains = 3;
}
